virtualMachines/esp32/aggregator/grammar/.antlr/WorkflowDslParser.java
// Generated from c:/dev/pulse-new-repo/virtualMachines/esp32/aggregator/grammar/WorkflowDsl.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class WorkflowDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		QUEUE=1, DATABASE=2, MANAGER=3, CONNECTION=4, MODE=5, SYSTEM=6, OF=7, 
		VISIBILITY=8, INTERNAL=9, EXPOSED=10, FILE=11, API=12, BASE=13, WORKFLOW=14, 
		BEGIN=15, END=16, STEP=17, CALL=18, ROUTE=19, SET=20, STATE=21, WAIT=22, 
		CHECK=23, EXPECT=24, RETRIES=25, EVERY=26, ISSUE=27, CREATE=28, TITLE=29, 
		DESCRIPTION=30, PRIORITY=31, ASSIGN=32, USER=33, REPORTER=34, TYPE=35, 
		TYPES=36, INTO=37, TESTCASE=38, TESTPLAN=39, PLAN=40, LINK=41, TO=42, 
		ADD=43, PROJECT=44, RELEASE=45, FOR=46, DEPLOYMENT=47, DEPLOY=48, ARTIFACT=49, 
		CLUSTER=50, NODES=51, LABEL=52, GENERIC_SYSTEM=53, PORT=54, INPUT=55, 
		OUTPUT=56, CONNECT=57, FROM=58, LOCATION=59, PROJECTPLAN=60, MILESTONE=61, 
		DUE=62, DATE=63, TASK=64, SYNCHPOINT=65, DELIVERABLE=66, RESOURCE=67, 
		COBEGIN=68, COEND=69, SUBFLOW=70, SYNC=71, ASYNC=72, ON=73, ERROR=74, 
		BACKOUT=75, TRY=76, CATCH=77, ENDTRY=78, IF=79, FIELD=80, EQUALS=81, CONTAINS=82, 
		THEN=83, ELSE=84, ENDIF=85, SERVICE=86, PROGRAM=87, DAEMON=88, PERSISTENT=89, 
		MIN_INSTANCES=90, MAX_INSTANCES=91, IDLE_TIMEOUT=92, TIME_UNIT=93, TARGETS=94, 
		STARTUP=95, TRUE=96, FALSE=97, ARROW=98, ASSIGN_EQ=99, LPAREN=100, RPAREN=101, 
		COMMA=102, SEMICOLON=103, STRING=104, NUMBER=105, IDENT=106, HASH_COMMENT=107, 
		SLASH_COMMENT=108, DASH_COMMENT=109, WS=110;
	public static final int
		RULE_program = 0, RULE_item = 1, RULE_genericSystemDecl = 2, RULE_genericSystemMember = 3, 
		RULE_genericSystemPortDecl = 4, RULE_genericSystemConnectionDecl = 5, 
		RULE_clusterCreateDecl = 6, RULE_artifactDeployDecl = 7, RULE_deploymentDecl = 8, 
		RULE_deploymentItem = 9, RULE_serviceLifecycleClause = 10, RULE_booleanLiteral = 11, 
		RULE_queueDecl = 12, RULE_databaseDecl = 13, RULE_systemTypeDecl = 14, 
		RULE_systemDecl = 15, RULE_systemMember = 16, RULE_systemQueueDecl = 17, 
		RULE_serviceDecl = 18, RULE_visibilityClause = 19, RULE_fileDecl = 20, 
		RULE_apiDecl = 21, RULE_workflowDecl = 22, RULE_workflowStmt = 23, RULE_cobeginStmt = 24, 
		RULE_cobeginMode = 25, RULE_subflowDecl = 26, RULE_tryStmt = 27, RULE_stepStmt = 28, 
		RULE_stepBody = 29, RULE_stepToken = 30, RULE_ifStmt = 31, RULE_branch = 32, 
		RULE_quotedList = 33, RULE_quotedString = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "item", "genericSystemDecl", "genericSystemMember", "genericSystemPortDecl", 
			"genericSystemConnectionDecl", "clusterCreateDecl", "artifactDeployDecl", 
			"deploymentDecl", "deploymentItem", "serviceLifecycleClause", "booleanLiteral", 
			"queueDecl", "databaseDecl", "systemTypeDecl", "systemDecl", "systemMember", 
			"systemQueueDecl", "serviceDecl", "visibilityClause", "fileDecl", "apiDecl", 
			"workflowDecl", "workflowStmt", "cobeginStmt", "cobeginMode", "subflowDecl", 
			"tryStmt", "stepStmt", "stepBody", "stepToken", "ifStmt", "branch", "quotedList", 
			"quotedString"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'QUEUE'", "'DATABASE'", "'MANAGER'", "'CONNECTION'", "'MODE'", 
			"'SYSTEM'", "'OF'", "'VISIBILITY'", "'INTERNAL'", "'EXPOSED'", "'FILE'", 
			"'API'", "'BASE'", "'WORKFLOW'", "'BEGIN'", "'END'", "'STEP'", "'CALL'", 
			"'ROUTE'", "'SET'", "'STATE'", "'WAIT'", "'CHECK'", "'EXPECT'", "'RETRIES'", 
			"'EVERY'", "'ISSUE'", "'CREATE'", "'TITLE'", "'DESCRIPTION'", "'PRIORITY'", 
			"'ASSIGN'", "'USER'", "'REPORTER'", "'TYPE'", "'TYPES'", "'INTO'", "'TESTCASE'", 
			"'TESTPLAN'", "'PLAN'", "'LINK'", "'TO'", "'ADD'", "'PROJECT'", "'RELEASE'", 
			"'FOR'", "'DEPLOYMENT'", "'DEPLOY'", "'ARTIFACT'", "'CLUSTER'", "'NODES'", 
			"'LABEL'", "'GENERIC_SYSTEM'", "'PORT'", "'INPUT'", "'OUTPUT'", "'CONNECT'", 
			"'FROM'", "'LOCATION'", "'PROJECTPLAN'", "'MILESTONE'", "'DUE'", "'DATE'", 
			"'TASK'", "'SYNCHPOINT'", "'DELIVERABLE'", "'RESOURCE'", "'COBEGIN'", 
			"'COEND'", "'SUBFLOW'", "'SYNC'", "'ASYNC'", "'ON'", "'ERROR'", "'BACKOUT'", 
			"'TRY'", "'CATCH'", "'ENDTRY'", "'IF'", "'FIELD'", "'EQUALS'", "'CONTAINS'", 
			"'THEN'", "'ELSE'", "'ENDIF'", "'SERVICE'", "'PROGRAM'", "'DAEMON'", 
			"'PERSISTENT'", "'MIN_INSTANCES'", "'MAX_INSTANCES'", "'IDLE_TIMEOUT'", 
			null, "'TARGETS'", "'STARTUP'", "'TRUE'", "'FALSE'", "'->'", "'='", "'('", 
			"')'", "','", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "QUEUE", "DATABASE", "MANAGER", "CONNECTION", "MODE", "SYSTEM", 
			"OF", "VISIBILITY", "INTERNAL", "EXPOSED", "FILE", "API", "BASE", "WORKFLOW", 
			"BEGIN", "END", "STEP", "CALL", "ROUTE", "SET", "STATE", "WAIT", "CHECK", 
			"EXPECT", "RETRIES", "EVERY", "ISSUE", "CREATE", "TITLE", "DESCRIPTION", 
			"PRIORITY", "ASSIGN", "USER", "REPORTER", "TYPE", "TYPES", "INTO", "TESTCASE", 
			"TESTPLAN", "PLAN", "LINK", "TO", "ADD", "PROJECT", "RELEASE", "FOR", 
			"DEPLOYMENT", "DEPLOY", "ARTIFACT", "CLUSTER", "NODES", "LABEL", "GENERIC_SYSTEM", 
			"PORT", "INPUT", "OUTPUT", "CONNECT", "FROM", "LOCATION", "PROJECTPLAN", 
			"MILESTONE", "DUE", "DATE", "TASK", "SYNCHPOINT", "DELIVERABLE", "RESOURCE", 
			"COBEGIN", "COEND", "SUBFLOW", "SYNC", "ASYNC", "ON", "ERROR", "BACKOUT", 
			"TRY", "CATCH", "ENDTRY", "IF", "FIELD", "EQUALS", "CONTAINS", "THEN", 
			"ELSE", "ENDIF", "SERVICE", "PROGRAM", "DAEMON", "PERSISTENT", "MIN_INSTANCES", 
			"MAX_INSTANCES", "IDLE_TIMEOUT", "TIME_UNIT", "TARGETS", "STARTUP", "TRUE", 
			"FALSE", "ARROW", "ASSIGN_EQ", "LPAREN", "RPAREN", "COMMA", "SEMICOLON", 
			"STRING", "NUMBER", "IDENT", "HASH_COMMENT", "SLASH_COMMENT", "DASH_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "WorkflowDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public WorkflowDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(WorkflowDslParser.EOF, 0); }
		public List<ItemContext> item() {
			return getRuleContexts(ItemContext.class);
		}
		public ItemContext item(int i) {
			return getRuleContext(ItemContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 9429411988265030L) != 0)) {
				{
				{
				setState(70);
				item();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ItemContext extends ParserRuleContext {
		public QueueDeclContext queueDecl() {
			return getRuleContext(QueueDeclContext.class,0);
		}
		public DatabaseDeclContext databaseDecl() {
			return getRuleContext(DatabaseDeclContext.class,0);
		}
		public SystemTypeDeclContext systemTypeDecl() {
			return getRuleContext(SystemTypeDeclContext.class,0);
		}
		public SystemDeclContext systemDecl() {
			return getRuleContext(SystemDeclContext.class,0);
		}
		public FileDeclContext fileDecl() {
			return getRuleContext(FileDeclContext.class,0);
		}
		public ApiDeclContext apiDecl() {
			return getRuleContext(ApiDeclContext.class,0);
		}
		public WorkflowDeclContext workflowDecl() {
			return getRuleContext(WorkflowDeclContext.class,0);
		}
		public DeploymentDeclContext deploymentDecl() {
			return getRuleContext(DeploymentDeclContext.class,0);
		}
		public ClusterCreateDeclContext clusterCreateDecl() {
			return getRuleContext(ClusterCreateDeclContext.class,0);
		}
		public ArtifactDeployDeclContext artifactDeployDecl() {
			return getRuleContext(ArtifactDeployDeclContext.class,0);
		}
		public GenericSystemDeclContext genericSystemDecl() {
			return getRuleContext(GenericSystemDeclContext.class,0);
		}
		public ItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_item; }
	}

	public final ItemContext item() throws RecognitionException {
		ItemContext _localctx = new ItemContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_item);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				queueDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(79);
				databaseDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(80);
				systemTypeDecl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				systemDecl();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(82);
				fileDecl();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(83);
				apiDecl();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(84);
				workflowDecl();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(85);
				deploymentDecl();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(86);
				clusterCreateDecl();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(87);
				artifactDeployDecl();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(88);
				genericSystemDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenericSystemDeclContext extends ParserRuleContext {
		public TerminalNode GENERIC_SYSTEM() { return getToken(WorkflowDslParser.GENERIC_SYSTEM, 0); }
		public QuotedStringContext quotedString() {
			return getRuleContext(QuotedStringContext.class,0);
		}
		public TerminalNode BEGIN() { return getToken(WorkflowDslParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(WorkflowDslParser.END, 0); }
		public TerminalNode SEMICOLON() { return getToken(WorkflowDslParser.SEMICOLON, 0); }
		public List<GenericSystemMemberContext> genericSystemMember() {
			return getRuleContexts(GenericSystemMemberContext.class);
		}
		public GenericSystemMemberContext genericSystemMember(int i) {
			return getRuleContext(GenericSystemMemberContext.class,i);
		}
		public GenericSystemDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericSystemDecl; }
	}

	public final GenericSystemDeclContext genericSystemDecl() throws RecognitionException {
		GenericSystemDeclContext _localctx = new GenericSystemDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_genericSystemDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(GENERIC_SYSTEM);
			setState(92);
			quotedString();
			setState(93);
			match(BEGIN);
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 171136785840078848L) != 0)) {
				{
				{
				setState(94);
				genericSystemMember();
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(END);
			setState(101);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenericSystemMemberContext extends ParserRuleContext {
		public GenericSystemDeclContext genericSystemDecl() {
			return getRuleContext(GenericSystemDeclContext.class,0);
		}
		public GenericSystemPortDeclContext genericSystemPortDecl() {
			return getRuleContext(GenericSystemPortDeclContext.class,0);
		}
		public GenericSystemConnectionDeclContext genericSystemConnectionDecl() {
			return getRuleContext(GenericSystemConnectionDeclContext.class,0);
		}
		public GenericSystemMemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericSystemMember; }
	}

	public final GenericSystemMemberContext genericSystemMember() throws RecognitionException {
		GenericSystemMemberContext _localctx = new GenericSystemMemberContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_genericSystemMember);
		try {
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case GENERIC_SYSTEM:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				genericSystemDecl();
				}
				break;
			case PORT:
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				genericSystemPortDecl();
				}
				break;
			case CONNECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(105);
				genericSystemConnectionDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenericSystemPortDeclContext extends ParserRuleContext {
		public TerminalNode PORT() { return getToken(WorkflowDslParser.PORT, 0); }
		public List<QuotedStringContext> quotedString() {
			return getRuleContexts(QuotedStringContext.class);
		}
		public QuotedStringContext quotedString(int i) {
			return getRuleContext(QuotedStringContext.class,i);
		}
		public TerminalNode TYPE() { return getToken(WorkflowDslParser.TYPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(WorkflowDslParser.SEMICOLON, 0); }
		public TerminalNode INPUT() { return getToken(WorkflowDslParser.INPUT, 0); }
		public TerminalNode OUTPUT() { return getToken(WorkflowDslParser.OUTPUT, 0); }
		public GenericSystemPortDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericSystemPortDecl; }
	}

	public final GenericSystemPortDeclContext genericSystemPortDecl() throws RecognitionException {
		GenericSystemPortDeclContext _localctx = new GenericSystemPortDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_genericSystemPortDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(PORT);
			setState(109);
			quotedString();
			setState(110);
			_la = _input.LA(1);
			if ( !(_la==INPUT || _la==OUTPUT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(111);
			match(TYPE);
			setState(112);
			quotedString();
			setState(113);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GenericSystemConnectionDeclContext extends ParserRuleContext {
		public TerminalNode CONNECT() { return getToken(WorkflowDslParser.CONNECT, 0); }
		public TerminalNode QUEUE() { return getToken(WorkflowDslParser.QUEUE, 0); }
		public List<QuotedStringContext> quotedString() {
			return getRuleContexts(QuotedStringContext.class);
		}
		public QuotedStringContext quotedString(int i) {
			return getRuleContext(QuotedStringContext.class,i);
		}
		public TerminalNode FROM() { return getToken(WorkflowDslParser.FROM, 0); }
		public TerminalNode TO() { return getToken(WorkflowDslParser.TO, 0); }
		public TerminalNode TYPE() { return getToken(WorkflowDslParser.TYPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(WorkflowDslParser.SEMICOLON, 0); }
		public GenericSystemConnectionDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericSystemConnectionDecl; }
	}

	public final GenericSystemConnectionDeclContext genericSystemConnectionDecl() throws RecognitionException {
		GenericSystemConnectionDeclContext _localctx = new GenericSystemConnectionDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_genericSystemConnectionDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(CONNECT);
			setState(116);
			match(QUEUE);
			setState(117);
			quotedString();
			setState(118);
			match(FROM);
			setState(119);
			quotedString();
			setState(120);
			match(TO);
			setState(121);
			quotedString();
			setState(122);
			match(TYPE);
			setState(123);
			quotedString();
			setState(124);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClusterCreateDeclContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(WorkflowDslParser.CREATE, 0); }
		public TerminalNode CLUSTER() { return getToken(WorkflowDslParser.CLUSTER, 0); }
		public List<QuotedStringContext> quotedString() {
			return getRuleContexts(QuotedStringContext.class);
		}
		public QuotedStringContext quotedString(int i) {
			return getRuleContext(QuotedStringContext.class,i);
		}
		public TerminalNode NODES() { return getToken(WorkflowDslParser.NODES, 0); }
		public QuotedListContext quotedList() {
			return getRuleContext(QuotedListContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(WorkflowDslParser.SEMICOLON, 0); }
		public TerminalNode LABEL() { return getToken(WorkflowDslParser.LABEL, 0); }
		public ClusterCreateDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clusterCreateDecl; }
	}

	public final ClusterCreateDeclContext clusterCreateDecl() throws RecognitionException {
		ClusterCreateDeclContext _localctx = new ClusterCreateDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_clusterCreateDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(CREATE);
			setState(127);
			match(CLUSTER);
			setState(128);
			quotedString();
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LABEL) {
				{
				setState(129);
				match(LABEL);
				setState(130);
				quotedString();
				}
			}

			setState(133);
			match(NODES);
			setState(134);
			quotedList();
			setState(135);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
